tests/snapshots/snapshot__case_1_successful_run_has_no_backtrace.snap
---
source: tests/snapshot.rs
assertion_line: 113
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
Hello, world!
────────────────────────────────────────────────────────────────────────────────
(HOST) INFO  device halted without error

