tests/snapshots/snapshot__case_2_raw_encoding.snap
---
source: tests/snapshot.rs
assertion_line: 109
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
Hello, world!
────────────────────────────────────────────────────────────────────────────────
(HOST) INFO  program has used at least 0.12/254.93 KiB (0.0%) of stack space
(HOST) INFO  device halted without error

