tests/snapshots/snapshot__case_2_with_time.snap
---
source: tests/snapshot.rs
assertion_line: 139
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
0 [INFO ] Location<levels.rs:10> info
1 [TRACE] Location<levels.rs:11> trace
2 [WARN ] Location<levels.rs:12> warn
3 [DEBUG] Location<levels.rs:13> debug
4 [ERROR] Location<levels.rs:14> error
println
────────────────────────────────────────────────────────────────────────────────
(HOST) INFO  program has used at least 0.23/254.93 KiB (0.1%) of stack space
(HOST) INFO  device halted without error

