tests/snapshots/snapshot__case_3_with_time_but_no_impl.snap
---
source: tests/snapshot.rs
assertion_line: 143
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
(HOST) WARN  logger format contains timestamp but no timestamp implementation was provided; consider removing the timestamp `{t}` from the logger format  or provide a `defmt::timestamp!` implementation
────────────────────────────────────────────────────────────────────────────────
<time> [INFO ] Location<levels.rs:10> info
<time> [TRACE] Location<levels.rs:11> trace
<time> [WARN ] Location<levels.rs:12> warn
<time> [DEBUG] Location<levels.rs:13> debug
<time> [ERROR] Location<levels.rs:14> error
println
────────────────────────────────────────────────────────────────────────────────
(HOST) INFO  program has used at least 0.23/254.93 KiB (0.1%) of stack space
(HOST) INFO  device halted without error

