tests/snapshots/snapshot__case_4_stack_overflow_is_reported_as_such.snap
---
source: tests/snapshot.rs
assertion_line: 114
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
ack(m=10, n=10, SP=0x2003bb94)
ack(m=10, n=9, SP=0x20037b74)
ack(m=10, n=8, SP=0x20033b54)
ack(m=10, n=7, SP=0x2002fb34)
ack(m=10, n=6, SP=0x2002bb14)
ack(m=10, n=5, SP=0x20027af4)
ack(m=10, n=4, SP=0x20023ad4)
ack(m=10, n=3, SP=0x2001fab4)
ack(m=10, n=2, SP=0x2001ba94)
ack(m=10, n=1, SP=0x20017a74)
ack(m=10, n=0, SP=0x20013a54)
ack(m=9, n=1, SP=0x2000fa34)
ack(m=9, n=0, SP=0x2000ba14)
ack(m=8, n=1, SP=0x200079f4)
ack(m=8, n=0, SP=0x200039d4)
────────────────────────────────────────────────────────────────────────────────
(HOST) WARN  program has used at least 240.62/254.93 KiB (94.4%) of stack space
stack backtrace:
   0: HardFaultTrampoline
      <exception entry>
(HOST) WARN  call stack was corrupted; unwinding could not be completed
(HOST) ERROR the program has overflowed its stack

