tests/snapshots/snapshot__case_4_without_time_but_with_impl.snap
---
source: tests/snapshot.rs
assertion_line: 143
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
[INFO ] Location<levels.rs:10> info
[TRACE] Location<levels.rs:11> trace
[WARN ] Location<levels.rs:12> warn
[DEBUG] Location<levels.rs:13> debug
[ERROR] Location<levels.rs:14> error
println
────────────────────────────────────────────────────────────────────────────────
(HOST) INFO  program has used at least 0.23/254.93 KiB (0.1%) of stack space
(HOST) INFO  device halted without error

