tests/snapshots/snapshot__case_5_panic_is_reported_as_such.snap
---
source: tests/snapshot.rs
assertion_line: 109
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
(HOST) WARN  logger format contains timestamp but no timestamp implementation was provided; consider removing the timestamp `{t}` from the logger format  or provide a `defmt::timestamp!` implementation
────────────────────────────────────────────────────────────────────────────────
<time> ERROR panicked at 'explicit panic'
────────────────────────────────────────────────────────────────────────────────
(HOST) INFO  program has used at least 0.16/254.93 KiB (0.1%) of stack space
stack backtrace:
   0: HardFaultTrampoline
      <exception entry>
   1: lib::inline::__udf
        at ./asm/inline.rs:181:5
   2: __udf
        at ./asm/lib.rs:51:17
   3: cortex_m::asm::udf
        at [cortex-m-0.7.7]/src/asm.rs:43:5
   4: _defmt_panic
        at /tmp/app/src/lib.rs:12:5
   5: defmt::export::panic
        at [defmt-0.3.2]/src/export/mod.rs:133:14
   6: panic::__cortex_m_rt_main
        at /tmp/app/src/bin/panic.rs:8:5
   7: main
        at /tmp/app/src/bin/panic.rs:6:1
   8: Reset
(HOST) ERROR the program panicked

