tests/snapshots/snapshot__case_6_host_with_timestamp.snap
---
source: tests/snapshot.rs
assertion_line: 143
expression: run_result.output

---
<time> [INFO ] Location<main.rs:209> flashing program (2 pages / 8.00 KiB)
<time> [INFO ] Location<main.rs:196> success!
<time> [WARN ] Location<main.rs:86> `defmt::timestamp!` implementation was found, but timestamp is not part of the log format; consider adding the timestamp `{t}` argument to the log format
────────────────────────────────────────────────────────────────────────────────
INFO  info
TRACE trace
WARN  warn
DEBUG debug
ERROR error
println
────────────────────────────────────────────────────────────────────────────────
<time> [INFO ] Location<canary.rs:125> program has used at least 0.23/254.93 KiB (0.1%) of stack space
<time> [INFO ] Location<mod.rs:131> device halted without error

