tests/snapshots/snapshot__case_7_unsuccessful_run_can_suppress_backtrace.snap
---
source: tests/snapshot.rs
assertion_line: 109
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
ERROR panicked at 'explicit panic'
────────────────────────────────────────────────────────────────────────────────
(HOST) INFO  program has used at least 0.16/254.93 KiB (0.1%) of stack space
(HOST) ERROR the program panicked

